<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	android:id="@+id/widget0"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_gravity="center"
	xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:id="@+id/widget32"
    android:layout_width="257dp"
    android:layout_height="206dp"
    android:layout_x="31dp"
    android:layout_y="12dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="204dp"
        android:layout_height="204dp"        
        android:layout_gravity="center" />

</LinearLayout>

<AbsoluteLayout
    android:id="@+id/widget34"
    android:layout_width="291dp"
    android:layout_height="122dp"
    android:layout_x="15dp"
    android:layout_y="254dp" >

<LinearLayout
    android:id="@+id/widget36"
    android:layout_width="35dp"
    android:layout_height="121dp"
    android:layout_x="62dp"
    android:layout_y="0dp"
    android:orientation="vertical" >

<TextView
	android:id="@+id/widget49"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sp"  
	android:textSize="12sp"
	android:textColor="#000000" />
<TextView
	android:id="@+id/widget50"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:textSize="12sp"
	android:textColor="#000000" />
<TextView
	android:id="@+id/widget70"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:textSize="12sp"
	android:textColor="#000000" />
<TextView
	android:id="@+id/widget51"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sp"  
	android:textSize="12sp"
	android:textColor="#000000" />
<TextView
	android:id="@+id/widget52"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sp" 
	android:textSize="12sp" 
	android:textColor="#000000" />
<TextView
	android:id="@+id/widget53"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sp"  
	android:textSize="12sp"
	android:textColor="#000000" />
<TextView
	android:id="@+id/widget54"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sp"  
	android:textSize="12sp"
	android:textColor="#000000" />
</LinearLayout>

<LinearLayout
    android:id="@+id/widget37"
    android:layout_width="209dp"
    android:layout_height="121dp"
    android:layout_x="75dp"
    android:layout_y="0dp"
    android:orientation="vertical" >

<!-- Alamat Label -->
<TextView
	android:id="@+id/alamat_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000000" 
    android:textSize="12sp"/>

<TextView
	android:id="@+id/widget90"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:textSize="4sp"/>

<!-- Lat Label -->
<TextView
    android:id="@+id/lat_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000000" 
    android:textSize="12sp"/>

<!-- Lng Label -->
<TextView
	android:id="@+id/lng_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000000"  
    android:textSize="12sp"/>

<!-- Kategori Label -->
<TextView
	android:id="@+id/kategori_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000000"  
	android:textSize="12sp"/>

<!-- Telp Label -->
<TextView
	android:id="@+id/telp_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#000000"  
    android:textSize="12sp"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/widget35"
    android:layout_width="wrap_content"
    android:layout_height="121dp"
    android:layout_x="0dp"
    android:layout_y="0dp"
    android:orientation="vertical" >

<TextView
    android:id="@+id/widget38"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/alamat" 
    android:textSize="12sp"
	android:textColor="#000000"  />

<TextView
	android:id="@+id/widget39"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:textSize="12sp"/>
<TextView
	android:id="@+id/widget69"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
    android:textSize="12sp"/>

<TextView
    android:id="@+id/widget40"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lat" 
    android:textSize="12sp"
	android:textColor="#000000"  />

<TextView
	android:id="@+id/widget41"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/lng" 	 
    android:textSize="12sp"
	android:textColor="#000000"  />

<TextView
	android:id="@+id/widget42"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/kategori" 
	android:textSize="12sp"
	android:textColor="#000000"  />

<TextView
	android:id="@+id/widget43"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/telp" 
	android:textSize="12sp"
	android:textColor="#000000"  />

</LinearLayout>
</AbsoluteLayout>
<AbsoluteLayout
	android:id="@+id/widget56"
	android:layout_width="287dp"
	android:layout_height="60dp"
	android:layout_x="15dp"
	android:layout_y="380dp">

<Button
    android:id="@+id/btn_view_map"
    android:layout_width="173dp"
    android:layout_height="wrap_content"
    android:layout_x="55dp"
    android:layout_y="7dp"
    android:text="@string/view_map"
    android:textSize="15sp" />

</AbsoluteLayout>

<LinearLayout
    android:id="@+id/widget92"
    android:layout_width="257dp"
    android:layout_height="wrap_content"
    android:layout_x="31dp"
    android:layout_y="215dp"
    android:orientation="vertical" >

<TextView
    android:id="@+id/name_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="18dp"
    android:layout_y="210dp"
    android:paddingBottom="10dip"
    android:paddingTop="10dip"
    android:textColor="#43bd00"
    android:textSize="15sp"
    android:textStyle="bold"      
	android:layout_gravity="center"/>
</LinearLayout>

</AbsoluteLayout>
